fixed modal on mobile

--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -371,7 +371,7 @@ ul.footer-links li a {
     min-height: 100vh !important;
     max-height: 100vh !important;
     position: absolute;
-    z-index: 1000 !important;
+    z-index: 2 !important;
     background: white !important;
   }
 .overlay {
@@ -381,7 +381,7 @@ ul.footer-links li a {
   width: 100vw;
   height: 100vh;
   background: rgba(255, 255, 255, 0.7);
-  z-index: 998;
+  z-index: 1;
   opacity: 0;
   transition: all 0.5s ease-in-out;
 }
